Wed Nov 26 22:12:37 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* gtkgame.c: when opening the bug report page in a browser window
	make gnubg fill in its version, build date and the operating system

Mon Nov 24 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkprefs.c: Make sure preview appears if libxml not present
	* gtkboard.c: Remove valgrind error


Sun Nov 23 21:07:12 GMT  Jim Segrave <jes@jes-2.demon.nl>

	* gnubg.c function header comments for token handling

Sat Nov 21 21:19:17 2003 Oystein Johansen <oystein@gnubg.org>

        * gtkgame.c: corrected some links (reported by Frank Grosse)

Thu Nov 20 20:24:04 GMT  Jim Segrave <jes@jes-2.demon.nl>

	* rollout.c - board setup in .sgf files of rollouts only worked if
	  player 0 made first move, now appears to be correct for both
	  players and double by both players

Thu Nov 20 07:44:55 2003  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* gtkgame.c (EvalWidget): Add /* xgettext: no-c-format */ comment.

Wed Nov 19 19:52:16 2003 GMT  Jim Segrave <jes@jes-2.demon.nl>

	* gtkgame.c gtkprefs.c gtkrace.c add some more I18n strings

Wed Nov 19 19:16:25 2003 GMT  Jim Segrave <jes@jes-2.demon.nl>

	* play.c - always output moves to stdout/message window

Wed Nov 19 16:35:25 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* htmlimages.c, play.c, progress.c, rollout.c:
	make CLI version compile, get rid of compiler warnings

Wed Nov 19 07:15:17 2003 Oystein Johansen <oystein@gnubg.org>

        * latex.c: use unicode and decrease size of board

Mon Nov 17 20:04:17 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* gtkoptions.c: add GUI menu entry for Czech language

Sun Nov 16 10:56:59 2003  Joern Thyssen  <jth@gnubg.org>

	* play.c (DiceRolled): add call to ShowBoard for CLI.
	(reported by Achim)

Wed Nov 12 01:17:58 2003  Oystein Johansen <oystein@gnubg.org>

        * gnubg.iss: New file for building MS-Windows installation archives
	             with Inno Setup.

Sat Nov  8 19:56:58 GMT 2003  Jim Segrave <jes@jes-2.demon.nl>
